# my-py-template

./: .gitignore
stage1/: .env.example  README.md  pyproject.toml
stage1/src/clients/llm/: gemini_client.py  openai_client.py
stage1/src/hooks/: agent_lifecycle_hooks.py  run_lifecycle_hooks.py
stage1/src/shared/: logging.py
stage1/src/shared/config/: app_context_singleton.py  bootstrap.py  config.py  request_context_ctxvar.py
stage1/src/shared/constants/: llm_constants.py
stage1/src/shared/logs/: correction_id.py  logging_setup.py
stage1/src/shared/persistence/: db_sqlite3.py
stage1/src/shared/utils/: basic_structure.py
